Add functionality to check whether batch size is a factor of test quantity before proceeding, update documentation